--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -34,12 +34,10 @@
 						 data-save-button-resource-id="<%= event.id %>"
 						 data-save-button-saved="<%= current_user.taste_events_saved? event.id %>"
 						 class="me-card__like-button">
-					<button data-target="save-button.button event.likeButton"
+					<button class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_user.taste_events_saved?(event.id) %>"
+									data-reflex-permanent
+									data-target="save-button.button event.likeButton"
 									id="add-to-favorites"
-									class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_user.taste_events_saved?(event.id) %>"
-									aria-label="Add to favorites"
-									aria-hidden="true"
-									aria-pressed="false"
 									style="<%= 'display: inline' if current_user.taste_events_saved?(event.id) %>">
 						<i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">
 							<svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -55,7 +53,8 @@
 				</div>
 			<% end %>
 			<a href="<%= event.url %>">
-				<div class="me-card__overlay mdc-ripple-surface"
+				<div data-reflex-permanent
+						 class="me-card__overlay mdc-ripple-surface"
 						 data-target="event.overlay"
 						 data-action="click->event#handleEventClick"></div>
 			</a>
