--- a/web/app/views/layouts/dashboard.html.erb
+++ b/web/app/views/layouts/dashboard.html.erb
@@ -43,27 +43,27 @@
 <div class="me-top-app-bar__fake-size"></div>
 
 <% if params['controller'] == 'devise/sessions' || current_page?(controller: 'feeds', action: 'index') %>
-  <%= render partial: "layouts/app-top-bar" %>
+  <%= render partial: "layouts/top-app-bar" %>
   <%= render partial: "feeds/float_menu" %>
   <section class="me-page me-page--feed is-animated">
     <!--    <div class="me-overlay"></div>-->
     <%= yield %>
   </section>
 <% elsif params['controller'] == 'events' && params['action'] == 'show' %>
-  <%= render partial: "layouts/app-top-bar", locals: {controller: 'events'} %>
+  <%= render partial: "layouts/top-app-bar", locals: {controller: 'events'} %>
   <section class="me-page me-page--centralized is-animated">
     <!--    <div class="me-overlay"></div>-->
     <%= yield %>
   </section>
 <% elsif params['controller'] == 'feeds' && params['action'] == 'train' %>
-  <%= render partial: "layouts/app-top-bar" %>
+  <%= render partial: "layouts/top-app-bar" %>
   <section class="me-page me-page--train-section">
     <%#= render partial: 'layouts/bot' %>
     <!--    <div class="me-overlay"></div>-->
     <%= yield %>
   </section>
 <% else %>
-  <%= render partial: "layouts/app-top-bar" %>
+  <%= render partial: "layouts/top-app-bar" %>
   <section class="me-page  is-animated">
     <%#= render partial: 'layouts/bot' %>
     <!--    <div class="me-overlay"></div>-->
