--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -2,7 +2,7 @@
 
 	<%= notice %>
 
-	<% unless @events&.suggestions.blank? %>
+	<% unless @collection[:events]&.suggestions.blank? %>
 		<section class="me-section me-section--condensed" style="margin: 0 auto 25px auto;">
 			<div class="me-section__inner">
 				<div class="me-section-head">
@@ -10,7 +10,7 @@
 				</div>
 				<div class="me-chip-set__wrapper">
 					<div class="me-chip-set me-chip-set--categories mdc-chip-set mdc-chip-set--choice">
-						<% @events&.suggestions&.each do |suggestion| %>
+						<% @collection[:events]&.suggestions&.each do |suggestion| %>
 							<a href="<%= search_index_path({q: suggestion}) %>" class="me-chip mdc-chip">
 								<span class="mdc-chip__text"><%= suggestion %></span>
 							</a>
@@ -21,7 +21,7 @@
 		</section>
 	<% end %>
 
-	<% if @data&.dig(:collection, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+	<% if @collection[:events].size > 0 %>
 		<section class="me-section me-section--condensed">
 			<div class="me-section__inner">
 				<%= render partial: "components/collection/events/collection", locals: {
@@ -32,23 +32,11 @@
 				} %>
 			</div>
 		</section>
-	<% elsif @data&.dig(:collection, :detail, :total_events_in_collection).try { |counter| counter == 0 } %>
+	<% elsif @collection[:events].size == 0 %>
 		<section class="me-section me-section--condensed" style="margin: 0 auto 25px auto;">
-			<div class="me-section__inner">
-				<h2 class="me-section__title">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
-			</div>
+			<h2 class="me-section__title">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
 		</section>
 	<% else %>
-		<!-- <section class="me-section me-section--condensed">
-			<div class="me-section__inner">
-				<h2 class="me-section__title">Pessoas</h2> -->
-		<%#= render partial: "components/user_suggestions", locals: {
-            data: {
-                following_users: User.recents
-            }
-        } %>
-		<!-- </div>
-	</section> -->
 		<section class="me-section me-section--without-padding">
 			<div class="me-section__inner">
 				<h2 class="me-section__title">Categorias</h2>
