--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -110,8 +110,8 @@
 
 			<% if props[:visible][:sign_up] %>
 				<% if !['registrations', 'sessions'].include? controller_name %>
-					<%= link_to new_user_registration_path do %>
-						<button class="me-button me-button--small mdc-button">Criar conta</button>
+					<%= link_to new_user_session_path do %>
+						<button class="me-button me-button--small mdc-button">Entrar</button>
 					<% end %>
 				<% end %>
 			<% end %>
