--- a/web/app/views/layouts/application.amp.erb
+++ b/web/app/views/layouts/application.amp.erb
@@ -1,107 +1,101 @@
 <!doctype html>
 <html ⚡ lang="pt-br">
 <head>
-  <meta charset="utf-8">
-  <title><%= meta_title %></title>
-  <link rel="canonical" href="<%= url_for(format: :html, only_path: false) %>">
-  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <meta name="theme-color" content="#ffffff"/>
+	<meta charset="utf-8">
+	<title><%= meta_title %></title>
+	<link rel="canonical" href="<%= url_for(format: :html, only_path: false) %>">
+	<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+	<meta name="theme-color" content="#ffffff"/>
 
-  <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
-  <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
-  <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
-  <script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
-  <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
+	<script async src="https://cdn.ampproject.org/v0.js"></script>
+	<script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
+	<script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
+	<script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
+	<script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
+	<script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
 
 
-  <link rel="preconnect dns-prefetch" href="https://fonts.gstatic.com/" crossorigin>
+	<link rel="preconnect dns-prefetch" href="https://fonts.gstatic.com/" crossorigin>
 
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Alegreme">
-  <link rel="apple-touch-icon" href="<%= image_url 'icons/launcher-icon-180x180.png' %>">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="apple-mobile-web-app-title" content="Alegreme">
+	<link rel="apple-touch-icon" href="<%= image_url 'icons/launcher-icon-180x180.png' %>">
 
-  <%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-48x48.png', {sizes: "48x48", type: "image/png"} %>
-  <%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-96x96.png', {sizes: "96x96", type: "image/png"} %>
-  <%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-144x144.png', {sizes: "144x144", type: "image/png"} %>
+	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-48x48.png', {sizes: "48x48", type: "image/png"} %>
+	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-96x96.png', {sizes: "96x96", type: "image/png"} %>
+	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-144x144.png', {sizes: "144x144", type: "image/png"} %>
 
-  <% if Rails.application.assets && Rails.application.assets['amp/application'] %>
-    <style amp-custom>
-      <%= Rails.application.assets['amp/application'].to_s.html_safe %>
-    </style>
-  <% else %>
-    <style amp-custom>
-      <%= File.read "#{Rails.root}/public#{stylesheet_path('amp/application', host: nil)}" %>
-    </style>
-  <% end %>
+	<style amp-custom>
+		<%= amp_stylesheet('amp/application.css').html_safe %>
+	</style>
 
-  <style amp-boilerplate>body {
-    -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-    -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-    -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
-    animation: -amp-start 8s steps(1, end) 0s 1 normal both
-  }
+	<style amp-boilerplate>body {
+		-webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+		-moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+		-ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+		animation: -amp-start 8s steps(1, end) 0s 1 normal both
+	}
 
-  @-webkit-keyframes -amp-start {
-    from {
-      visibility: hidden
-    }
-    to {
-      visibility: visible
-    }
-  }
+	@-webkit-keyframes -amp-start {
+		from {
+			visibility: hidden
+		}
+		to {
+			visibility: visible
+		}
+	}
 
-  @-moz-keyframes -amp-start {
-    from {
-      visibility: hidden
-    }
-    to {
-      visibility: visible
-    }
-  }
+	@-moz-keyframes -amp-start {
+		from {
+			visibility: hidden
+		}
+		to {
+			visibility: visible
+		}
+	}
 
-  @-ms-keyframes -amp-start {
-    from {
-      visibility: hidden
-    }
-    to {
-      visibility: visible
-    }
-  }
+	@-ms-keyframes -amp-start {
+		from {
+			visibility: hidden
+		}
+		to {
+			visibility: visible
+		}
+	}
 
-  @-o-keyframes -amp-start {
-    from {
-      visibility: hidden
-    }
-    to {
-      visibility: visible
-    }
-  }
+	@-o-keyframes -amp-start {
+		from {
+			visibility: hidden
+		}
+		to {
+			visibility: visible
+		}
+	}
 
-  @keyframes -amp-start {
-    from {
-      visibility: hidden
-    }
-    to {
-      visibility: visible
-    }
-  }</style>
-  <noscript>
-    <style amp-boilerplate>body {
-      -webkit-animation: none;
-      -moz-animation: none;
-      -ms-animation: none;
-      animation: none
-    }</style>
-  </noscript>
-  <%= render partial: 'layouts/meta-tags.html.erb' %>
+	@keyframes -amp-start {
+		from {
+			visibility: hidden
+		}
+		to {
+			visibility: visible
+		}
+	}</style>
+	<noscript>
+		<style amp-boilerplate>body {
+			-webkit-animation: none;
+			-moz-animation: none;
+			-ms-animation: none;
+			animation: none
+		}</style>
+	</noscript>
+	<%= render partial: 'layouts/meta-tags.html.erb' %>
 
 <body>
 <div class="amp">
 
-  <amp-animation id="showAnim"
-                 layout="nodisplay">
-    <script type="application/json">
+	<amp-animation id="showAnim"
+								 layout="nodisplay">
+		<script type="application/json">
     {
       "duration": "200ms",
       "fill": "both",
@@ -115,12 +109,13 @@
         }]
       }]
     }
-  </script>
-  </amp-animation>
 
-  <amp-animation id="hideAnim"
-                 layout="nodisplay">
-    <script type="application/json">
+		</script>
+	</amp-animation>
+
+	<amp-animation id="hideAnim"
+								 layout="nodisplay">
+		<script type="application/json">
     {
       "duration": "200ms",
       "fill": "both",
@@ -134,41 +129,45 @@
         }]
       }]
     }
-  </script>
-  </amp-animation>
 
-  <button id="scrollToTopButton"
-          on="tap:top.scrollTo(duration=200)"
-          class="scrollToTop">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M13 19V7.83l4.88 4.88c.39.39 1.03.39 1.42 0 .39-.39.39-1.02 0-1.41l-6.59-6.59c-.39-.39-1.02-.39-1.41 0l-6.6 6.58c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L11 7.83V19c0 .55.45 1 1 1s1-.45 1-1z"/></svg>
-  </button>
+		</script>
+	</amp-animation>
 
-  <div id="top" style="visibility: hidden">
-    <amp-position-observer on="enter:hideAnim.start; exit:showAnim.start"
-                           layout="nodisplay">
-    </amp-position-observer>
-  </div>
+	<button id="scrollToTopButton"
+					on="tap:top.scrollTo(duration=200)"
+					class="scrollToTop">
+		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+			<path fill="none" d="M0 0h24v24H0V0z"/>
+			<path d="M13 19V7.83l4.88 4.88c.39.39 1.03.39 1.42 0 .39-.39.39-1.02 0-1.41l-6.59-6.59c-.39-.39-1.02-.39-1.41 0l-6.6 6.58c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L11 7.83V19c0 .55.45 1 1 1s1-.45 1-1z"/>
+		</svg>
+	</button>
 
-  <div class="me-top-app-bar">
-    <div class="me-top-app-bar__wrapper">
-      <a href="/">
-        <amp-img height="29"
-                 src="<%= image_url 'logo@3x' %>"
-                 width="124"
-                 alt="Alegreme"></amp-img>
-      </a>
-      <amp-social-share type="system">
-        Compartilhar
-      </amp-social-share>
-    </div>
-  </div>
-  <div class="me-content">
-    <%= yield %>
-  </div>
+	<div id="top" style="visibility: hidden">
+		<amp-position-observer on="enter:hideAnim.start; exit:showAnim.start"
+													 layout="nodisplay">
+		</amp-position-observer>
+	</div>
+
+	<div class="me-top-app-bar">
+		<div class="me-top-app-bar__wrapper">
+			<a href="/">
+				<amp-img height="29"
+								 src="<%= image_url 'logo@3x' %>"
+								 width="124"
+								 alt="Alegreme"></amp-img>
+			</a>
+			<amp-social-share type="system">
+				Compartilhar
+			</amp-social-share>
+		</div>
+	</div>
+	<div class="me-content">
+		<%= yield %>
+	</div>
 </div>
 
 <div class="me-footer">
-  <span>Feito com ♥ no Centro Histórico de Porto Alegre</span>
+	<span>Feito com ♥ no Centro Histórico de Porto Alegre</span>
 </div>
 
 </body>
