--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -9,30 +9,17 @@
   border-radius: 10px;
   @include mobile-only {
     grid-column: 1 span;
-    width: auto;
+    background: #f7f7f7;
+    margin: 12px 0 12px 0;
+    border: 0;
+    border-radius: 0;
+    box-shadow: inset 0 0 5px #00000005;
     padding: 0;
-    margin: 6px 12px 35px 12px;
-    min-height: 220px;
-    [data-section-disposition="horizontal"] & {
-      background: #f7f7f7;
-      margin: 12px 0 12px 0;
-      border: 0;
-      border-radius: 0;
-      box-shadow: inset 0 0 5px #00000005;
-    }
+    width: auto;
     [data-section-disposition="vertical"] & {
-      margin: 6px 0 35px 0;
+      margin: 0 (-$section-padding-phone);
     }
-    //.me-page--profile & {
-    //  margin: 0 -16px 35px -16px;
-    //}
   }
-
-  // .me-event-single__similar & {
-  //   @include mobile-only {
-  //     padding: 0 $section-padding-phone;
-  //   }
-  // }
 
   & h3 {
     font-family: $font-primary-family;
@@ -94,9 +81,9 @@
       );
       @include mobile-only {
         @include mdc-layout-grid-cell(
-        $size: "phone",
-        $default-span: 2,
-        $gutter: 12px
+                $size: "phone",
+                $default-span: 2,
+                $gutter: 12px
         );
       }
     }
@@ -155,54 +142,6 @@
     }
   }
 
-  & .me-card {
-    //background: none;
-    //min-height: 150px;
-    //border-radius: 2px;
-
-    //&__primary-section {
-    //  font-size: 10px;
-    //  font-weight: 500;
-    //}
-
-    //&__secondary-section {
-    //  font-size: 14px;
-    //  @include mobile-only {
-    //    font-size: 12px;
-    //  }
-    //
-    //  & a {
-    //    color: $font-secondary-color;
-    //    &:hover {
-    //      color: $brand-color-aa;
-    //    }
-    //  }
-    //}
-    //
-    //&__overlay {
-    //  //box-shadow: $media-box-shadow-small;
-    //}
-
-    //& .mdc-card__media {
-    //  border-radius: $media-border-radius;
-    //}
-  }
-
-  // &::before {
-  //   content: close-quote;
-  //   width: 100%;
-  //   height: 260px;
-  //   position: absolute;
-  //   left: 0;
-  //   animation-name: show-in;
-  //   animation-duration: 1.5s;
-  //   //border-bottom: 1px solid darken($surface-color, 5%);
-  // }
-
-  // & .mdc-layout-grid__cell--span-3, .mdc-layout-grid__cell--span-3-desktop {
-  //   grid-column-end: span 2;
-  // }
-
 }
 
 @keyframes show-in {
@@ -213,6 +152,5 @@
 
   to {
     opacity: 1;
-    //transform: translate(0, 0);
   }
 }
