Adjust in page and tab-bar width for desktop

--- a/web/app/assets/stylesheets/components/me-head.scss
+++ b/web/app/assets/stylesheets/components/me-head.scss
@@ -6,6 +6,7 @@
   will-change: transform, box-shadow;
   transition: transform 250ms ease, 250ms box-shadow ease;
   box-shadow: 0px 0px 1px 0px #0a0a0a99;
+  background: $background-color;
 
   &--with-shadow {
     box-shadow: 0px 1px 6px 1px #00000030;
