--- a/web/app/assets/stylesheets/components/me-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-chip-set.scss
@@ -77,17 +77,15 @@
 
     & .mdc-chip {
       padding: 1px 8px;
-      //background: $elevated-surface-color;
       height: unset;
 
       & .material-icons {
         padding: 4px;
       }
-
-      &--selected {
-        //border: 1px solid $border-color;
-      }
     }
+  }
 
+  &--with-padding {
+    padding: 0 24px 0 20px;
   }
 }
