--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -1,97 +1,115 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <script crossorigin="anonymous" rel="preload" src="https://polyfill.io/v3/polyfill.min.js?flags=gated&rum=true&features=Element.prototype.closest%2CIntersectionObserverEntry%2CIntersectionObserver%2CMutationObserver%2Cfetch%2CrequestAnimationFrame%2CrequestIdleCallback%2CArray.prototype.forEach"></script>
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-	  w[l] = w[l] || [];
-	  w[l].push({
-		  'gtm.start'                    :
-			  new Date().getTime(), event: 'gtm.js'
-	  });
-	  var f                          = d.getElementsByTagName(s)[0],
-	      j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-	  j.async                        = true;
-	  j.src                          =
-		  'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-	  f.parentNode.insertBefore(j, f);
-  })(window, document, 'script', 'dataLayer', 'GTM-WH7RVCR');</script>
-  <!-- End Google Tag Manager -->
+	<script crossorigin="anonymous" rel="preload" src="https://polyfill.io/v3/polyfill.min.js?flags=gated&rum=true&features=Element.prototype.closest%2CIntersectionObserverEntry%2CIntersectionObserver%2CMutationObserver%2Cfetch%2CrequestAnimationFrame%2CrequestIdleCallback%2CArray.prototype.forEach"></script>
+
+	<!-- Google Analytics -->
+	<script>
+      (function (i, s, o, g, r, a, m) {
+          i["GoogleAnalyticsObject"] = r;
+          i[r] = i[r] || function () {
+              (i[r].q = i[r].q || []).push(arguments)
+          }, i[r].l = 1 * new Date();
+          a = s.createElement(o),
+              m = s.getElementsByTagName(o)[0];
+          a.async = 1;
+          a.src   = g;
+          m.parentNode.insertBefore(a, m)
+      })(window, document, "script", "https://www.google-analytics.com/analytics.js", "ga");
+
+      <% if current_user %>
+      ga("create", {
+          trackingId:   "UA-144190547-1",
+          cookieDomain: "auto",
+          userId: <%= current_user.id %>
+      });
+      <% else %>
+      ga("create", {
+          trackingId:   "UA-144190547-1",
+          cookieDomain: "auto"
+      });
+      <% end %>
+
+      document.addEventListener("turbolinks:load", (event) => {
+          if (event.data.url) {
+              ga("set", {
+                  location: event.data.url,
+                  title: document.title
+              });
+              ga("send", "pageview");
+          }
+      })
+	</script>
+	<!-- End Google Analytics -->
 
 
-  <title><%= meta_title %></title>
+	<title><%= meta_title %></title>
 
-  <meta name="theme-color" content="#ffffff"/>
-  <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	<meta name="theme-color" content="#ffffff"/>
+	<meta name="viewport"
+				content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
-  <%= render partial: 'layouts/meta-tags' %>
+	<%= render partial: 'layouts/meta-tags' %>
 
-  <%= canonical_url %>
-  <%= amp_url %>
+	<%= canonical_url %>
+	<%= amp_url %>
 
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
+	<%= csrf_meta_tags %>
+	<%= csp_meta_tag %>
 	<%= action_cable_meta_tag %>
 
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Alegreme">
-  <link rel="apple-touch-icon" href="<%= image_url 'icons/launcher-icon-180x180.png' %>">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="apple-mobile-web-app-title" content="Alegreme">
+	<link rel="apple-touch-icon" href="<%= image_url 'icons/launcher-icon-180x180.png' %>">
 
-  <%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-48x48.png', {sizes: "48x48", type: "image/png"} %>
-  <%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-96x96.png', {sizes: "96x96", type: "image/png"} %>
-  <%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-144x144.png', {sizes: "144x144", type: "image/png"} %>
+	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-48x48.png', {sizes: "48x48", type: "image/png"} %>
+	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-96x96.png', {sizes: "96x96", type: "image/png"} %>
+	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-144x144.png', {sizes: "144x144", type: "image/png"} %>
 
-  <link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+	<link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
+	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-  <link rel="preload" as="font" href="https://fonts.googleapis.com/icon?family=Roboto:300,400,500,700&display=swap">
-  <% if content_for? :preload_image %>
-    <link rel="preload" as="image" href="<%= content_for :preload_image %>">
-  <% end %>
+	<link rel="preload" as="font" href="https://fonts.googleapis.com/icon?family=Roboto:300,400,500,700&display=swap">
+	<% if content_for? :preload_image %>
+		<link rel="preload" as="image" href="<%= content_for :preload_image %>">
+	<% end %>
 
-  <%= Gon::Base.render_data %>
+	<%= Gon::Base.render_data %>
 
-  <!-- <script src="https://sdk.pushy.me/web/1.0.5/pushy-sdk.js" defer></script> -->
+	<!-- <script src="https://sdk.pushy.me/web/1.0.5/pushy-sdk.js" defer></script> -->
 
-  <%#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
-  <script async src="https://cdn.ampproject.org/v0.js" data-turbolinks-track="reload"></script>
-  <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
+	<%#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+	<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+	<script async src="https://cdn.ampproject.org/v0.js" data-turbolinks-track="reload"></script>
+	<script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
 </head>
 <body data-user-type="<%= current_user ? "logged-user" : "guest-user" %>" data-controller="<%= controller_name %>" data-action="<%= action_name %>">
-<!-- Google Tag Manager (noscript) -->
-<noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WH7RVCR"
-          height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-<!-- End Google Tag Manager (noscript) -->
 
 <!-- <div class="me-top-app-bar__fake-size"></div> -->
 
 <div data-reflex-permanent class="me-head" data-controller="head" data-target="head.head">
-  <%= render partial: 'layouts/top-app-bar' %>
-  <%= render partial: 'components/tab-bar', locals: {props: {active: "#{controller_name}##{action_name}"}} %>
+	<%= render partial: 'layouts/top-app-bar' %>
+	<%= render partial: 'components/tab-bar', locals: {props: {active: "#{controller_name}##{action_name}"}} %>
 </div>
 
 <%= yield %>
 
 <div data-controller="snackbar" class="me-snackbar mdc-snackbar">
-  <div class="mdc-snackbar__surface">
-    <div class="mdc-snackbar__label" role="status" aria-live="polite">
-      <%= notice %>
-    </div>
-    <div class="mdc-snackbar__actions">
-      <button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <path fill="none" d="M0 0h24v24H0V0z"/>
-          <path d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"/>
-        </svg>
-      </button>
-    </div>
-  </div>
+	<div class="mdc-snackbar__surface">
+		<div class="mdc-snackbar__label" role="status" aria-live="polite">
+			<%= notice %>
+		</div>
+		<div class="mdc-snackbar__actions">
+			<button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">
+				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+					<path fill="none" d="M0 0h24v24H0V0z"/>
+					<path d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"/>
+				</svg>
+			</button>
+		</div>
+	</div>
 </div>
 
 <%= render partial: 'components/bottom-navigation' if mobile_device? %>
