--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -2,21 +2,7 @@
 <html lang="pt-br">
 <head>
   <script crossorigin="anonymous" rel="preload" src="https://polyfill.io/v3/polyfill.min.js?flags=gated&rum=true&features=Element.prototype.closest%2CIntersectionObserverEntry%2CIntersectionObserver%2CMutationObserver%2Cfetch%2CrequestAnimationFrame%2CrequestIdleCallback%2CArray.prototype.forEach"></script>
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-	  w[l] = w[l] || [];
-	  w[l].push({
-		  'gtm.start'                    :
-			  new Date().getTime(), event: 'gtm.js'
-	  });
-	  var f                          = d.getElementsByTagName(s)[0],
-	      j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-	  j.async                        = true;
-	  j.src                          =
-		  'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-	  f.parentNode.insertBefore(j, f);
-  })(window, document, 'script', 'dataLayer', 'GTM-WH7RVCR');</script>
-  <!-- End Google Tag Manager -->
+
 
   <title>Alegreme - Aproveite a cidade de Porto Alegre</title>
 
@@ -70,12 +56,35 @@
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v4.0&appId=2687173967974142&autoLogAppEvents=1"></script>
 
-<!-- Google Tag Manager (noscript) -->
-<noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WH7RVCR"
-          height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-<!-- End Google Tag Manager (noscript) -->
+<!-- Google Analytics -->
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i["GoogleAnalyticsObject"] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src   = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, "script", "https://www.google-analytics.com/analytics.js", "ga");
+
+    <% if current_user %>
+    ga("create", {
+        trackingId:   "UA-144190547-1",
+        cookieDomain: "auto",
+        userId: <%= current_user.id %>
+    });
+    <% else %>
+    ga("create", {
+        trackingId:   "UA-144190547-1",
+        cookieDomain: "auto"
+    });
+    <% end %>
+    ga("send", "pageview");
+</script>
+<!-- End Google Analytics -->
 
 <%= yield %>
 
