--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -3,44 +3,7 @@
 <head>
 	<script crossorigin="anonymous" rel="preload" src="https://polyfill.io/v3/polyfill.min.js?flags=gated&rum=true&features=Element.prototype.closest%2CIntersectionObserverEntry%2CIntersectionObserver%2CMutationObserver%2Cfetch%2CrequestAnimationFrame%2CrequestIdleCallback%2CArray.prototype.forEach"></script>
 
-	<!-- Google Analytics -->
-	<script>
-      (function (i, s, o, g, r, a, m) {
-          i["GoogleAnalyticsObject"] = r;
-          i[r] = i[r] || function () {
-              (i[r].q = i[r].q || []).push(arguments)
-          }, i[r].l = 1 * new Date();
-          a = s.createElement(o),
-              m = s.getElementsByTagName(o)[0];
-          a.async = 1;
-          a.src   = g;
-          m.parentNode.insertBefore(a, m)
-      })(window, document, "script", "https://www.google-analytics.com/analytics.js", "ga");
-
-      <% if current_user %>
-      ga("create", {
-          trackingId:   "UA-144190547-1",
-          cookieDomain: "auto",
-          userId: <%= current_user.id %>
-      });
-      <% else %>
-      ga("create", {
-          trackingId:   "UA-144190547-1",
-          cookieDomain: "auto"
-      });
-      <% end %>
-
-      document.addEventListener("turbolinks:load", (event) => {
-          if (event.data.url) {
-              ga("set", {
-                  location: event.data.url,
-                  title: document.title
-              });
-              ga("send", "pageview");
-          }
-      })
-	</script>
-	<!-- End Google Analytics -->
+	<%= render 'layouts/google_analytics' %>
 
 
 	<title><%= meta_title %></title>
