--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -56,35 +56,7 @@
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v4.0&appId=2687173967974142&autoLogAppEvents=1"></script>
 
-<!-- Google Analytics -->
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i["GoogleAnalyticsObject"] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src   = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, "script", "https://www.google-analytics.com/analytics.js", "ga");
-
-    <% if current_user %>
-    ga("create", {
-        trackingId:   "UA-144190547-1",
-        cookieDomain: "auto",
-        userId: <%= current_user.id %>
-    });
-    <% else %>
-    ga("create", {
-        trackingId:   "UA-144190547-1",
-        cookieDomain: "auto"
-    });
-    <% end %>
-    ga("send", "pageview");
-</script>
-<!-- End Google Analytics -->
+<%= render 'layouts/google_analytics' %>
 
 <%= yield %>
 
@@ -92,7 +64,7 @@
   <button class="pwa-install-prompt__overlay" type="button">Close</button>
   <div class="pwa-install-prompt">
     <div class="pwa-install-prompt__icon__container">
-      <img class="pwa-install-prompt__icon" src="<%= image_url 'icons/launcher-icon-72x72' %>" alt="Alegreme" />
+      <img class="pwa-install-prompt__icon" src="<%#= image_url 'icons/launcher-icon-72x72' %>" alt="Alegreme" />
     </div>
     <div class="pwa-install-prompt__content">
       <h3 class="pwa-install-prompt__title">Instalar Alegreme</h3>
