--- a/web/app/assets/stylesheets/components/me-footer.scss
+++ b/web/app/assets/stylesheets/components/me-footer.scss
@@ -1,7 +1,6 @@
 
-
 .me-footer {
-  margin: 0;
+  margin: 50px 0 0 0;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -139,7 +138,7 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 160%;
-    margin:6px 0 24px 0;
+    margin: 6px 0 24px 0;
   }
 
   &__credits, &__vamodale {
