--- a/web/app/views/welcome/_invite.html.erb
+++ b/web/app/views/welcome/_invite.html.erb
@@ -64,7 +64,7 @@
         Criar meu perfil
       </div>
     <% end %>
-    <%= link_to feed_path do %>
+    <%= link_to new_user_session_path do %>
       <div class="invite__cta invite__cta--signin">
         Entrar
       </div>
