--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -24,7 +24,7 @@
         </section>
 
         <%# if params[:pwa] %>
-<!--        <div class="login-button" title="Entrar" onclick="location.assign('<%= new_user_session_path %>')">-->
+<!--        <div class="login-button" title="Entrar" onclick="location.assign('<%#= new_user_session_path %>')">-->
 <!--          Entrar-->
 <!--          <span>-->
           <%#= image_tag "welcome/right-arrow.png", alt: "seta", class: "lazyload" %>
