--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -294,7 +294,7 @@ $background-color: #f3f5f7;
   text-align: center;
   margin: 24px 0 0 0;
   @include mobile-only {
-    text-align: left;
+    //text-align: left;
   }
 
   & a {
