Adjust in swipable_controller

--- a/web/app/assets/stylesheets/components/me-swipable.scss
+++ b/web/app/assets/stylesheets/components/me-swipable.scss
@@ -390,7 +390,7 @@
     transition: opacity 0.4s linear;
     text-align: center;
     max-width: 300px;
-    background: $border-color;
+    background: $surface-secondary-color;
     border-radius: 6px;
     height: 350px;
     align-items: center;
