--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -22,6 +22,11 @@
   @include mobile-only {
     padding: 0;
   }
+  @include desktop-only {
+    border: 1px solid $border-color;
+    padding: 12px 0;
+    border-radius: 2px
+  }
 
   &[data-event-description-open="true"] {
 
