--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -1,10 +1,22 @@
 .me-page {
-  color: $font-primary-color;
-  padding-top: 100px;
   @include is-show-in-animated;
+  color: $font-primary-color;
+  padding-top: 56px;
+  @include desktop-only {
+    margin: auto;
+    width: auto;
+    max-width: $page-width;
+  }
   @include mobile-only {
     max-width: 100vw;
     overflow: hidden;
+  }
+
+  [data-controller="feeds"] &,
+  [data-controller="movies"] & {
+    @include desktop-only {
+      padding-top: 100px;
+    }
   }
 
   [data-controller="events"][data-action="show"] &,
