--- a/web/app/assets/stylesheets/components/me-tab-bar.scss
+++ b/web/app/assets/stylesheets/components/me-tab-bar.scss
@@ -8,7 +8,7 @@
   background: $surface-color;
   display: block;
   width: auto;
-  max-width: calc(#{$page-width} - 20px);
+  max-width: $page-width;
   position: sticky;
   top: 0;
   z-index: 5;
