Adjust tab-bar style for desktop

--- a/web/app/views/components/_tab-bar.html.erb
+++ b/web/app/views/components/_tab-bar.html.erb
@@ -1,16 +1,15 @@
 <%
 
 	props = {
-			active:         nil,
-			movies_count:   Movie.all.size,
-			mobile_visible: mobile_device? &&
-													(controller_name == 'feeds') &&
-													['index', 'category', 'city'].include?(params[:action])
+			active:       nil,
+			movies_count: Movie.all.size,
+			feed:         controller_name == 'feeds' && ['index', 'category', 'city'].include?(action_name),
+			movies:       controller_name == 'movies'
 	}.deep_merge!(props || {})
 
 %>
 
-<% if props[:mobile_visible] %>
+<% if props[:feed] || props[:movies] %>
 	<div data-reflex-permanent data-controller="tab-bar" data-target="tab-bar.tabBar" data-tab-bar-selected-tab="<%= "#{controller_name}##{action_name}" %>" data-tab-bar-turbolinks-persist-scroll="0" id="tab-bar" class="me-tab-bar mdc-tab-bar" role="tablist">
 		<div class="mdc-tab-scroller">
 			<div data-target="tab-bar.scroller" class="mdc-tab-scroller__scroll-area">
@@ -42,38 +41,20 @@
             </span>
 						<span class="mdc-tab__ripple"></span>
 					</button>
+					<% if !mobile_device? %>
+						<button data-action="click->tab-bar#open" data-section="feeds#city" data-tab-path="<%= movies_path %>" class="mdc-tab <%= class_string('mdc-tab--active': controller_name == 'movies') %>">
+            <span class="mdc-tab__content">
+              <span class="mdc-tab__text-label">Filmes</span>
+            </span>
+							<span class="me-tab-indicator mdc-tab-indicator <%= class_string('mdc-tab-indicator--active': controller_name == 'movies') %>">
+              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+            </span>
+							<span class="mdc-tab__ripple"></span>
+						</button>
+					<% end %>
 				</div>
 			</div>
 		</div>
 	</div>
 <% end %>
 
-<% if !mobile_device? &&
-		(controller_name == 'feeds' || controller_name == 'movies') %>
-	<div data-turbolinks-permanent data-controller="tab-bar" data-target="tab-bar.tabBar" data-tab-bar-selected-tab="<%= "#{controller_name}##{action_name}" %>" data-tab-bar-turbolinks-persist-scroll="0" id="tab-bar" class="me-tab-bar mdc-tab-bar" role="tablist">
-		<div class="mdc-tab-scroller">
-			<div data-target="tab-bar.scroller" class="mdc-tab-scroller__scroll-area is-horizontal-scrollable">
-				<div class="mdc-tab-scroller__scroll-content">
-					<button data-action="click->tab-bar#open" data-section="feeds#index" data-tab-path="<%= url_for feed_path %>" class="mdc-tab">
-                <span class="mdc-tab__content">
-                  <span class="mdc-tab__text-label">Eventos</span>
-                </span>
-						<span class="me-tab-indicator mdc-tab-indicator">
-                  <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
-                </span>
-						<span class="mdc-tab__ripple"></span>
-					</button>
-					<button data-action="click->tab-bar#open" data-section="movies#index" data-tab-path="<%= url_for movies_path %>" class="mdc-tab">
-                <span class="mdc-tab__content">
-                  <span class="mdc-tab__text-label">Filmes</span>
-                </span>
-						<span class="me-tab-indicator mdc-tab-indicator">
-                  <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
-                </span>
-						<span class="mdc-tab__ripple"></span>
-					</button>
-				</div>
-			</div>
-		</div>
-	</div>
-<% end %>
