--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "feeds/float_menu" unless mobile_device? %>
+<%#= render partial: "feeds/float_menu" unless mobile_device? %>
 
 <section data-controller="page" data-target="page.page" class="me-page me-page--feed is-animated">
 
